--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,19 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  #messages
+  form
+    input#content
+    button Send
+  script(src='http://code.jquery.com/jquery-1.11.3.min.js')
+  script(src='https://cdn.socket.io/socket.io-1.3.7.js')
+  script().
+    var socket = io();
+    $('form').submit(function(){
+      socket.emit('message from client', $('#content').val());
+      $('#content').val('');
+      return false;
+    });
+    socket.on('message from server', function(message){
+      $('#messages').append($('<p>').text(message));
+    });
