--- a/views/index.jade
+++ b/views/index.jade
@@ -1,12 +1,12 @@
 extends layout
 
 block content
-  #messages
   form
     input#content
     button Send
+  #messages
+  script(src='/socket.io/socket.io.js')
   script(src='http://code.jquery.com/jquery-1.11.3.min.js')
-  script(src='https://cdn.socket.io/socket.io-1.3.7.js')
   script().
     var socket = io();
     $('form').submit(function(){
